<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class ProposalLog extends Model
{
    use HasFactory;
    protected $fillable = [
        'proposal_id',
        'status',
        'description',
    ];
}
