Project yayasan {
    database: 'MySql'
}

Table external_user {
    id int [pk, increment]
    user_type tinyint [not null, note: '1 for public, 2 for goverment']
    name varchar(200) [not null]
    phone varchar(15) [not null]
    address varchar(255) [not null]
    district_id int
    city_id int
    province_id int
    status boolean [not null, default: 'false']
    created_at timestamp
    updated_at timestamp
}

Table internal_user {
    id int [pk, increment]
    name varchar(255) [not null]
    institution_id int [not null, ref: > intitutions.id]
    nis varchar(25)
    parent_data varchar(200)
    phone varchar(15)
    address varchar(255)
    district_id int
    city_id int
    province_id int
    instutition_class_id int [ref: > instutition_class.id]
    instutition_class_level_id int [ref: > instutition_class_level.id]
    status boolean [not null, default: 'true']
    created_at timestamp
    updated_at timestamp
}

Table intitutions {
    id int [pk, increment]
    name varchar(255) [not null]
    status boolean [default: 'true']
    created_at timestamp
    updated_at timestamp
}

Table institution_class {
    id int [pk, increment]
    intitution_id int [ref: > intitutions.id]
    name varchar(255) [not null]
    created_at timestamp
    updated_at timestamp
}

Table institutions_class_level {
    id int [pk, increment]
    institution_class_id int [ref: > intitution_class.id]
    name varchar(10)
    created_at timestamp
    updated_at timestamp
}

Table positions {
    id int [pk, increment]
    name varchar(100) [not null]
    role_id int [not null]
    created_at timestamp
    updated_at timestamp
}

Table employees {
    id int [pk, increment]
    name varchar(255) [not null]
    user_id int [ref: > users.id]
    nip varchar(30) [not null]
    phone varchar(15) [not null]
    address varchar(255)
    district_id int
    city_id int
    province_id int
    account_number varchar(25)
    institution_id [ref: > intitutions.id]
    position_id int [ref: > positions.id]
    status boolean [default: 'true']
    created_at timestamp
    updated_at timestamp
}

Table users {
    id int [pk, increment]
    username varchar(100)
    password text
    role int
    created_at timestamp
    updated_at timestamp
}

Table expense_categories {
    id int [pk, increment]
    name varchar [not null]
    created_at timestamp
    updated_at timestamp
}

Table income_types {
    id int [pk, increment]
    name varchar(100)
    created_at timestamp
    updated_at timestamp
}

Table income_categories {
    id int [pk, increment]
    name varchar(100) [not null]
    created_at timestamp
    updated_at timestamp
}

Table income_methods {
    id int [pk, increment]
    name varchar(100) [not null]
    created_at timestamp
    updated_at timestamp
}

Table accounts {
    id int [pk, increment]
    code string
    name string
    created_at timestamp
    updated_at timestamp
}

Table incomes {
    id int [pk, increment]
    invoice_number string [not null, unique]
    user_type int [note: '1 for internal user, 2 for external user']
    user_id [note: 'based on user type']
    total_amount float
    institution_id int [note: 'This column show as recipients']
    income_type_id int [ref: > income_types.id]
    income_method_id int [ref: > income_methods.id]
    transaction_start_date timestamp
    due_date timestamp
    created_by int
    status boolean [note: '0 for hold, 1 for received by treasurer of foundation', default: 0]
    payment_status tinyint [note: '1 for paid, 2 for partially paid, 3 for unpaid', default: 3]
    message text
    created_at timestamp
    updated_at timestamp
}

Table income_items {
    id int [pk, increment]
    income_id int [ref: > incomes.id]
    income_category_id int [ref: > income_categories.id]
    amount float
    description text
    month tinyint [note: 'For monthly payment, should have value between 1 - 12']
    week tinyint [note: 'For weekly payment, should have value between 1 - 5']
    day tinyint [note: 'For daily payment, should have value between 1 - 31']
    created_at timestamp
    updated_at timestamp
}

Table income_payments {
    id int [pk, increment]
    income_id int [ref: > incomes.id]
    amount float
    account_id int [ref: > accounts.id]
    proof_payment text
    payment_time timestamp
    created_at timestamp
    updated_at timestamp
}

Table cash_logs {
    id int [pk, increment]
    cash_type_id int
    debit float
    credit float
    transaction_time timestamp
    created_at timestamp
    updated_at timestamp
}

Table payments {
    id int [pk, increment]
    invoice_number_group varchar ['This should be filled when user pays for items simultaneously']
    invoice_number varchar [not null]
    amount double [default 0]
    payment_date date
    payment_time time
    is_annualy boolean
    is_monthly boolean
    is_weekly boolean
    is_daily boolean
    annualy tinyint [note: 'This value should be between 1 - 12']
    monthly tinyint [note: 'This value should be between 1 - 12']
    weekly tinyint [note: 'This value should be between 1 - 5']
    daily tinyint [note: 'This value should be between 1 - 31']
    status tinyint [note: '1 paid, 2 pending, 3 draft']
    user_type tinyint [note: '1 for internal user , 2 for external user']
    user_id int
    income_category_id int
    income_method_id int [note: 'payment method, related to income_methods table']
    institution_id int [note: 'Related to intitutions table']
    institution_class_id int
    institution_class_level_id int
    payment_at_class tinyint [note: 'This field as marker for user, in which class he was paid this payment']
    payment_target_position int [note: 'this column to record to which position this payment was received, related to positions table']
    payment_target_user int [note: 'this column to record to whom this payment was received, related to employees table']
    created_at timestamp
    updated_at timestamp
}

Table payment_docs {
    id int [pk, increment]
    payment_id int
    path text
    created_at timestamp
    updated_at timestamp
}

Table wallets {
    id int [pk, increment]
    model varchar [note: 'This will be filled with model name']
    user_id int [note: 'Related to id column in stored model']
    debit double
    credit double
    source_id int [note: 'Related to payments table']
    source_text varchar [note: 'Description from what payment this amount received']
    income_category_id int [note: 'to group by category on digital wallets']
    created_at timestamp
    updated_at timestamp
}

Table account_transactions {
    id int [pk, increment]
    account_id int
    debit double [default: '0']
    credit double [default: '0']
    status tinyint [note: '1 for success, 2 for pending']
    source_id int [note: 'Related to income_categories table']
    description text
    created_at timestamp
    updated_at timestamp
}

Table account_transaction_docs {
    id int [pk, increment]
    account_transaction_id int [ref: > account_transactions.id]
    path text
    created_at timestamp
    updated_at timestamp
}

Table Proposals {
    id int [pk, increment]
    title varchar
    event_date date
    event_time time
    pic int [note: 'Related to InternalUser or Employees table']
    pic_user_type tinyint [note: '1 for internal, 2 for employee']
    description text
    budget_total double [default: '0']
    approved_budget double [default: '0']
    status tinyint [note: '1 for approve and budget is provide, 2 for waiting approval, 3 for approved and waiting budget, 4 for reject, 5 for draft']
    created_at timestamp
    updated_at timestamp
}

Table Proposal_logs {
    id int [pk, increment]
    proposal_id int [ref: > proposals.id]
    status tinyint [note: '1 for approve and budget is provide, 2 for waiting approval, 3 for approved and waiting budget, 4 for reject, 5 for draft']
    description varchar
    created_at timestamp
    updated_at timestamp
}

Table proposal_docs {
    id int [pk, increment]
    proposal_id int
    path text
    created_at timestamp
    updated_at timestamp
}